truetandem/e-QIP-prototype#751 Fix z-index on suggestions

--- a/src/components/Form/Help/Help.scss
+++ b/src/components/Form/Help/Help.scss
@@ -4,7 +4,6 @@
 .help {
   padding-top: 2.6rem;
   line-height: 4.6rem;
-  z-index: 1;
 
   > label {
     top: -1.2rem !important;
